# AuraStream-API

./: .env.sample  .gitignore  Dockerfile  LICENSE.txt  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requierements.txt  requirements.txt
src/: main.py
src/api/: admin.py  auth.py  cart.py  movies.py  order.py  payments.py  social.py  webhooks.py
src/core/: celery.py  dependencies.py  settings.py
src/database/: session_postgresql.py  utils.py
src/database/alembic/: env.py
src/database/alembic/versions/: 0fc9df55b8da_add_cartmodel.py  10b69bb6f1d7_add_payments_and_payment_items_tables.py  15c1c2ce9ef6_small_fixes_in_the_usermodel.py  3627de571515_add_comments_and_movie_likes_tables.py  4a91cb0c4205_fixed_datetime_issue_in_the_commentmodel.py  4b27656437fa_add_orders_and_order_items_tables.py  612dbe0da688_fixed_typo_in_orderstatus_add_cancelled_.py  62acdd867968_user_module_migrations.py  d7d79faf0193_add_ratingmodel.py  (+6 more)
src/database/models/: cart.py  movies.py  order.py  payments.py  user.py
src/schemas/: base.py  cart.py  movies.py  order.py  payments.py  responses.py  social.py  user.py
src/services/: auth_user.py  cart.py  movies.py  order.py  payments.py  social.py
src/tasks/: cleanup_tasks.py  email_tasks.py
src/templates/: account_activation.html  payment_success.html  reply_notification.html  reset_password.html  reset_password_success.html
src/tests/: conftest.py  test_admin.py  test_auth.py  test_cart.py  test_movies.py  test_order_payment.py  test_social.py  test_webhook.py
src/utils/: service_helpers.py  tokens.py
