[project]
name = "aurastream-api"
version = "0.1.0"
description = "Online movie theater API"
authors = [
    {name = "Viacheslav Nykonenko", email = "slava.nykon@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.13.1)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "stripe (>=14.4.1,<15.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "fastapi-mail (>=1.6.2,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "bcrypt (<4.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
